--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.24.10",
+    "lottie-react": "^2.4.1",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
